--- a/chart.html
+++ b/chart.html
@@ -11,6 +11,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
+<meta property="og:title" content="Recession and Pandemic, Historical Context">
+<meta property="og:description" content="The Covid-19 Pandemic has brought about a global recession unlike anything we have seen in history. Finds out more about how the Pandemic and the context of global recessions throughout history">
+<meta property="og:image" content="http://ringkasan.net/recession/images/recession.jpg">
+<meta property="og:url" content="http://ringkasan.net/recession/chart.htm">
+
 <title>chart</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
