--- a/chart.html
+++ b/chart.html
@@ -11,8 +11,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<meta property="og:title" content="Recession and Pandemic, Historical Context">
-<meta property="og:description" content="The Covid-19 Pandemic has brought about a global recession unlike anything we have seen in history. Finds out more about how the Pandemic and the context of global recessions throughout history">
+<meta property="og:title" content="Covid-19 Pandemic and Unprecedented Global Recession">
+<meta property="og:description" content="How does the effect of pandemic compare to the Great Depression or the World Wars">
 <meta property="og:image" content="http://ringkasan.net/recession/images/recession.jpg">
 <meta property="og:url" content="http://ringkasan.net/recession/chart.htm">
 
