--- a/chart.html
+++ b/chart.html
@@ -10,12 +10,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<meta property="og:title" content="Covid-19 Pandemic and Unprecedented Global Recession">
-<meta property="og:description" content="How does the effect of pandemic compare to the Great Depression or the World Wars">
-<meta property="og:image" content="http://ringkasan.net/recession/images/recession.jpg">
-<meta property="og:url" content="http://ringkasan.net/recession/chart.htm">
-
 <title>chart</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
